--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <h1></h1>
 
   <form id="todos-form">
-    <h2 id="todos-title">Todos (<span id="todos-count"></span>)</h2>
+    <h2 id="todos-title">Tasks (<span id="todos-count"></span>)</h2>
 
     <ul id="todos-ul"></ul>
 
@@ -30,6 +30,6 @@
     </div>
   </form>
 
-  <script src="todos.js"></script>
+  <script src="tasks.js"></script>
 </body>
 </html>
